# 42sh

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  TODO  configure
check/: CMakeLists.txt  norm.sh  run_tests.py  test_auto.py  test_exec.c  test_fnmatch.c  test_lexer.c  test_parser.c  test_readline.c
check/fnmatch/: 01_star_2.test  02_star_3.test  04_question_mark_2.test  05_question_mark_3.test  08_range_1.test  09_range_2.test  11_range_4.test  12_range_5.test  13_range_6.test  14_range_7.test  15_range_8.test  16_range_9.test  20_range_13_with_negation.test  22_range_with_negation_bracket.test  24_range_starting_with_minus.test  25_range_ending_with_minus.test  26_multiple_stars_1.test  27_multiple_stars_2.test  30_class_3_alnum.test  31_class_4_digit.test  33_class_6_alnum.test  tests
check/hello/: 01_hello.test
check/lexer/: 00_tokens.test  01_squotes.test  01_tokens.test  02_blank.test  03_single-quote.test  04_double-quote.test  05_reswords.test  06_paren.test  07_paren.test  08_paren.test  09_comment.test  100_single-quotes.test  101_double-quote.test  102_quotes.test  103_quotes.test  104_quotes.test  200_reswords.test  201_if.test  202_then.test  203_else.test  204_elif.test  205_fi.test  206_do.test  207_done.test  208_case.test  209_esac.test  210_while.test  211_until.test  212_for.test  213_in.test  302_paren.test  303_paren.test  400_comment.test  401_comment.test  500_and.test  501_pipe.test  502_andif.test  503_orif.test  504_semi.test  505_dsemi.test  (+24 more)
check/parser/: 003_input.test
check/qdunittest/: case.py  loader.py  program.py  result.py  runner.py
tests/: CMakeLists.txt  run_tests.py  show_ast.sh  test_ast_printer.c  test_env.c  test_evalexpr.c  test_exec.c  test_fnmatch.c  test_foo.py  test_glob.c  test_interface.c  test_lexer.c  test_parser.c  test_readline.c  test_utils.c
tests/42sh/: 00_input_00_input.test  00_input_01_input.test  00_input_02_multi.test  00_input_03_bang.test  00_input_04_bang.test  00_input_05_multi.test  00_input_06_multi.test  00_input_07_continuation.test  00_input_08_continuation.test  00_input_09_file.test  00_input_10_file_multi.test  00_input_11_exit.test  00_input_12_exit.test  00_input_13_exit.test  00_input_14_braces.test  00_input_15_braces.test  00_input_16_braces.test  00_input_17_no_file.test  00_input_18_emptyvar.test  01_redir_00_command.test  01_redir_01_command.test  (+92 more)
tests/42sh-alias/: 00_alias.test  01_alias.test  02_alias.test  03_alias.test  04_alias.test  05_alias.test  06_alias.test  07_alias.test  08_alias.test  09_alias.test  10_alias.test  11_alias.test  12_alias.test  13_for.test  14_for.test  15_do.test  16_squotes.test  17_dquotes.test  18_expand.test  19_backslash.test
tests/42sh-arith/: 01_noparenthesis_00_simple.test  02_parenthesis_00_simple.test  03_operators_00_binary.test  03_operators_01_binary.test  03_operators_02_shifts.test  03_operators_03_base.test  03_operators_04_bang.test  03_operators_05_unary.test  04_error_00_remaining_stack.test  04_error_01_empty_stack.test  04_error_02_divzero.test  04_error_03_modzero.test  05_large_00_basic.test  06_assoc_00_pow.test  10_var_00_simple.test  10_var_01_plus.test  10_var_02_plus.test  10_var_03_minus.test  10_var_04_nested.test  10_var_05_operators.test  99_random.test
tests/42sh-bad/: 00_band_and.test  01_begin_pipe.test  02_elif_without_then.test  03_empty_case.test  04_empty_pipe.test  05_and_and.test  06_no_do.test  07_no_done.test  08_no_fi.test  09_no_then.test  10_if_no_body.test  11_triple_pipes.test
tests/42sh-builtins/: 00_source.test  00_source_00_source.test  00_source_01_source.test  00_source_02_source.test  00_source_03_source.test  00_source_04_noarg.test  00_source_05_error.test  00_source_06_error.test  00_source_08_error.test  00_source_09_error.test  01_break_00_break.test  01_break_01_arg.test  01_break_02_arg.test  01_break_03_arg.test  01_break_04_arg.test  01_break_05_arg.test  01_break_06_param.test  01_break_07_inner.test  01_break_08_inner.test  01_break_09_if.test  01_break_10_multi.test  01_break_11_multi_error.test  01_break_12_multi.test  01_source.test  02_shopt_00_noarg.test  02_shopt_01_arg1.test  02_shopt_02_arg2.test  02_shopt_03_set.test  02_shopt_04_unset.test  02_shopt_05_quiet.test  02_shopt_06_quiet.test  02_shopt_07_quiet.test  02_source.test  03_alias_00_unalias.test  03_alias_01_alias.test  03_alias_02_alias.test  03_alias_03_alias.test  03_alias_04_alias.test  03_alias_05_alias.test  03_alias_06_unalias.test  (+12 more)
tests/42sh-env/: 00_env.test  01_env.test  02_env.test  03_env.test  04_env.test  05_env.test  06_var.test  07_env.test  07_home.test  08_env.test  08_multiple.test  09_env.test  09_function.test  10_env.test  10_function.test  11_env.test  11_multi.test
tests/42sh-expansion/: 000_tilde.test  001_tilde.test  002_tilde.test  003_tilde.test  004_tilde.test  005_tilde.test  006_tilde.test  007_tilde.test  008_tilde.test  009_tilde.test  010_tilde.test  011_tilde.test  012_tilde.test  013_tilde.test  02_tilde.test  03_tilde.test  114_quotes.test  115_quotes.test  14_quotes.test  200_subshell.test  201_subshell.test  202_subshell.test  203_subshell.test  300_redir.test  400_element_removal.test
tests/42sh-ifs/: 00_ifs.test  01_ifs.test  02_ifs.test  03_ifs.test  04_ifs.test  05_ifs.test  06_ifs.test  07_ifs.test  08_ifs.test  09_ifs.test
tests/42sh-quoting/: 00_single.test  01_single.test  02_single.test  03_single.test  04_single.test  05_single.test  06_single.test  10_double.test  11_double.test  12_double.test  13_double.test  14_double.test  15_double.test  16_double.test  17_double.test  18_double.test  19_double.test  20_double.test  30_backslash.test  31_backslash.test  32_backslash.test  33_backslash.test  34_dollar_backslash.test  40_misc.test
tests/42sh-specialvars/: 00_cmdline.test  01_script.test  02_function.test  03_functions.test  04_function.test  05_function_argcount.test  06_command_not_found.test  07_command_not_found2.test  08_status.test  09_and.test  09_or.test  10_semi.test  11_reset.test  12_command_not_found.test  13_retval.test
(+542 files in other folders)
